--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
-  "name": "project-1",
+  "name": "engage-game-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "A game built with typescript and Object Oriented Principles",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "webpack-dev-server",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/spencer1573/devengage-Project-1.git"
+    "url": "git+https://github.com/DevEngage/engage-game-project.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/spencer1573/devengage-Project-1/issues"
+    "url": "https://github.com/DevEngage/engage-game-project/issues"
   },
-  "homepage": "https://github.com/spencer1573/devengage-Project-1#readme"
+  "homepage": "https://github.com/DevEngage/engage-game-project#readme",
+  "devDependencies": {
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0",
+    "typescript": "^1.8.10",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "jquery": "^2.2.4",
+    "shuffle-array": "^1.0.0",
+    "ts-loader": "^0.8.2"
+  }
 }
